@@ -1,3 +1,14 @@
+2019-09-23  Brent Fulgham  <bfulgham@apple.com>
+
+        Unreviewed build fix after r250169 and r250236.
+
+        * NetworkProcess/curl/NetworkDataTaskCurl.cpp:
+        (WebKit::NetworkDataTaskCurl::createCurlRequest):
+        * UIProcess/API/C/curl/WKWebsiteDataStoreRefCurl.cpp:
+        (WKWebsiteDataStoreEnableDefaultNetworkProxySettings):
+        (WKWebsiteDataStoreEnableCustomNetworkProxySettings):
+        (WKWebsiteDataStoreDisableNetworkProxySettings):
+
 2019-09-23  David Kilzer  <ddkilzer@apple.com>
 
         clang-tidy: Fix unnecessary copy/ref churn of for loop variables in WebKit
